# charity-donation-api

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
backend/campaign/: admin.py  models.py  serializers.py  urls.py  views.py
backend/campaign/migrations/: 0001_initial.py  0002_campaign_image.py  0003_alter_campaign_status_campaigndocument.py  0004_alter_campaign_deadline.py  0005_alter_campaign_goal_amount.py  0006_alter_campaign_created_at_alter_campaign_goal_amount_and_more.py
backend/campaign/tests/: test_campaign_api.py  test_campaign_model.py
backend/core/: urls.py
backend/core/settings/: __init__.py  base.py  development.py  logging.py  production.py  rest_framework.py
backend/donation/: admin.py  models.py  serializers.py  urls.py  views.py
backend/donation/migrations/: 0001_initial.py  0002_alter_donation_created_at.py
backend/donation/tests/: test_donation_api.py  test_donation_model.py
backend/main_app/: permissions.py  receipt_gen.py  serializer_utils.py  utils.py
backend/main_app/management/commands/: expire_campaigns.py  wait_for_db.py
backend/user/: admin.py  models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_user_balance.py  0003_alter_user_first_name.py  0004_alter_user_role.py
backend/user/tests/: test_user_admin.py  test_user_api.py  test_user_model.py
scripts/: start_chron.sh
