[tool.poetry]
name = "charity-donation-api"
version = "0.1.0"
description = ""
authors = ["NikitaPash <pashchuknik@gmail.com >"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "backend" }
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.10"
drf-spectacular = "^0.28.0"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
